# demand_prediction

./: .gitignore  .pre-commit-config.yaml  README.md  test.json  test.py
Evaluation/: Evaluation.Rmd  Evaluation.ipynb
api/: Dockerfile  api_response.py  config.py  main.py  pyproject.toml  schema_models.py
api/data_prepration/: __init__.py  base.py  daily.py  dropout.py  interval.py
api/models/: __init__.py  base.py  daily.py  dropout.py  interval.py
based_on_day/labeling/: labeling.Rmd  labeling.ipynb
based_on_day/model/: arima_model.Rmd  arima_model.ipynb
based_on_day/notebook/: fearture_extraction.Rmd  fearture_extraction.ipynb
based_on_time_interval/Evaluation/: Evaluation.Rmd  Evaluation.ipynb
based_on_time_interval/labeling/: labeling.Rmd  labeling.ipynb
based_on_time_interval/model/: model.Rmd  model.ipynb
based_on_time_interval/notebook/: fearture_extraction.Rmd  fearture_extraction.ipynb
model/: arima_model.Rmd  model.Rmd  model.ipynb
notebook/: Data_Cleaning.ipynb  feartureEextraction.Rmd  feartureEextraction.ipynb  fearture_extraction.Rmd  fearture_extraction.ipynb
