[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["mohammad vatani <mohammad.vn78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
xgboost = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
